scss partial done yet it does not work the style I applied. I have to review it or ask for support. I left the Yanelis review class 1 at 30 minute

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,2 +1,9 @@
+.list {
+  list-style: none; }
+  .list__general__cocktails {
+    background-color: grey; }
+  .list__cocktail__box {
+    border-radius: 5%;
+    background-color: yellow; }
 
 /*# sourceMappingURL=main.css.map */
