Danelis help, html changed and I carried out reviweing the material because I do not understand how to do the next step

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,8 +1,6 @@
 .list {
   list-style: none; }
-  .list__general__cocktails {
-    background-color: grey; }
-  .list__cocktail__box {
+  .list__box {
     border-radius: 5%;
     background-color: yellow; }
 
