--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -1,11 +1,7 @@
 .list {
   list-style: none;
 
-  &__general__cocktails {
-    background-color: grey;
-  }
-
-  &__cocktail__box {
+  &__box {
     border-radius: 5%;
     background-color: yellow;
   }
